[gd_scene load_steps=6 format=3 uid="uid://dau84xq82wi3r"]

[ext_resource type="Script" uid="uid://tovqvpj8h7ch" path="res://scripts/game_menu.gd" id="1_mw6r2"]
[ext_resource type="FontFile" uid="uid://xux3xfr3ypdx" path="res://assets/fonts/PixelOperator8.ttf" id="1_ysvk1"]
[ext_resource type="StyleBox" uid="uid://dlylifh8na7gj" path="res://styles/button_style_hover_1.tres" id="2_mw6r2"]
[ext_resource type="StyleBox" uid="uid://gcex4d8ps4va" path="res://styles/button_style_1.tres" id="3_ldg7d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8k1r"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Menu" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_mw6r2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.243988
offset_right = 0.243988
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8k1r")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.5
offset_top = -94.5
offset_right = 157.5
offset_bottom = 94.5
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_ysvk1")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = ExtResource("2_mw6r2")
theme_override_styles/normal = ExtResource("3_ldg7d")
text = "BACK"

[node name="Option" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_ysvk1")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = ExtResource("2_mw6r2")
theme_override_styles/normal = ExtResource("3_ldg7d")
text = "OPTION"

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_ysvk1")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = ExtResource("2_mw6r2")
theme_override_styles/normal = ExtResource("3_ldg7d")
text = "EXIT"

[connection signal="pressed" from="Panel/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
